Changes added by PRAMOD

--- a/src/app/_metronic/partials/content/widgets/lists/lists-widget3/lists-widget3.component.html
+++ b/src/app/_metronic/partials/content/widgets/lists/lists-widget3/lists-widget3.component.html
@@ -13,7 +13,7 @@
         <!-- href="#"  need customer details page on click -->
         {{ data.companyName }}
       </a>
-      <span class="text-muted fw-bold d-block">Due in 2 Days</span>
+      <!-- <span class="text-muted fw-bold d-block">Due in 2 Days</span> -->
     </div>
     <!-- end::Description -->
     <span *ngIf="i == 0" class="badge badge-light-danger fs-6 fw-bolder">  {{ data.netOS | number :"1.2-2" }} </span>
