changes added by tejaswini

--- a/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -50,22 +50,22 @@
       </span>
       <div class="menu-sub menu-sub-accordion" routerLinkActive="menu-active-bg">
         <div *ngIf="isAddAcc" class="menu-item menu-accordion" routerLinkActive="active"
-          routerLink="/crafted/pages/wizards/horizontal" data-kt-menu-trigger="click">
+          routerLink="/credit/addAccount" data-kt-menu-trigger="click">
           <span class="menu-link">
             <span class="menu-bullet">
               <span class="bullet bullet-dot"></span>
             </span>
-            <span class="menu-title" data-link="/crafted/pages/wizards/horizontal">Add Account
+            <span class="menu-title" data-link="/credit/addAccount">Add Account
             </span>
           </span>
         </div>
         <div *ngIf="isViewAcc" class="menu-item menu-accordion" routerLinkActive="active"
-          routerLink="/crafted/pages/profile" data-kt-menu-trigger="click">
+          routerLink="/credit/viewAccount" data-kt-menu-trigger="click">
           <span class="menu-link">
             <span class="menu-bullet">
               <span class="bullet bullet-dot"></span>
             </span>
-            <span class="menu-title">View Account
+            <span class="menu-title" data-link="/credit/viewAccount">View Account
             </span>
           </span>
         </div>
