Changes added by PRAMOD

--- a/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -49,8 +49,8 @@
         <span class="menu-arrow"></span>
       </span>
       <div class="menu-sub menu-sub-accordion" routerLinkActive="menu-active-bg">
-        <div *ngIf="isAddAcc" class="menu-item menu-accordion" routerLinkActive="active"
-          routerLink="/credit/addAccount" data-kt-menu-trigger="click">
+        <div *ngIf="isAddAcc" class="menu-item menu-accordion" routerLinkActive="active" routerLink="/credit/addAccount"
+          data-kt-menu-trigger="click">
           <span class="menu-link">
             <span class="menu-bullet">
               <span class="bullet bullet-dot"></span>
@@ -69,8 +69,8 @@
             </span>
           </span>
         </div>
-        <div *ngIf="isAddSale" class="menu-item menu-accordion" routerLinkActive="active"
-          routerLink="/credit/addSales" data-kt-menu-trigger="click">
+        <div *ngIf="isAddSale" class="menu-item menu-accordion" routerLinkActive="active" routerLink="/credit/addSales"
+          data-kt-menu-trigger="click">
           <span class="menu-link">
             <span class="menu-bullet">
               <span class="bullet bullet-dot"></span>
@@ -79,8 +79,8 @@
             </span>
           </span>
         </div>
-        <div *ngIf="isViewSale" class="menu-item menu-accordion" routerLinkActive="active"
-          routerLink="/credit/addSales" data-kt-menu-trigger="click">
+        <div *ngIf="isViewSale" class="menu-item menu-accordion" routerLinkActive="active" routerLink="/credit/addSales"
+          data-kt-menu-trigger="click">
           <span class="menu-link">
             <span class="menu-bullet">
               <span class="bullet bullet-dot"></span>
@@ -849,13 +849,13 @@
         <span class="menu-icon">
           <app-keenicon name="profile-circle" class="fs-2"></app-keenicon>
         </span>
-        <span class="menu-title" data-link="/crafted/account">REPORT
+        <span class="menu-title">REPORT
         </span>
         <span class="menu-arrow"></span>
       </span>
       <div class="menu-sub menu-sub-accordion" routerLinkActive="menu-active-bg">
         <div *ngIf="isDailyReportEntries" class="menu-item menu-accordion" routerLinkActive="here show"
-          data-kt-menu-trigger="click">
+          routerLink="/report/dailyReportEntries" data-kt-menu-trigger="click">
           <span class="menu-link">
             <span class="menu-bullet">
               <span class="bullet bullet-dot"></span>
@@ -865,7 +865,7 @@
           </span>
         </div>
         <div *ngIf="isDailyReport" class="menu-item menu-accordion" routerLinkActive="here show"
-          data-kt-menu-trigger="click">
+          routerLink="/report/dailyReport" data-kt-menu-trigger="click">
           <span class="menu-link">
             <span class="menu-bullet">
               <span class="bullet bullet-dot"></span>
@@ -875,7 +875,7 @@
           </span>
         </div>
         <div *ngIf="isMonthlyReport" class="menu-item menu-accordion" routerLinkActive="here show"
-          data-kt-menu-trigger="click">
+          routerLink="/report/monthlyReport" data-kt-menu-trigger="click">
           <span class="menu-link">
             <span class="menu-bullet">
               <span class="bullet bullet-dot"></span>
@@ -885,7 +885,7 @@
           </span>
         </div>
         <div *ngIf="isVatBook" class="menu-item menu-accordion" routerLinkActive="here show"
-          data-kt-menu-trigger="click">
+          routerLink="/report/vatBook" data-kt-menu-trigger="click">
           <span class="menu-link">
             <span class="menu-bullet">
               <span class="bullet bullet-dot"></span>
@@ -895,7 +895,7 @@
           </span>
         </div>
         <div *ngIf="isProfitReport" class="menu-item menu-accordion" routerLinkActive="here show"
-          data-kt-menu-trigger="click">
+          routerLink="/report/profitReport" data-kt-menu-trigger="click">
           <span class="menu-link">
             <span class="menu-bullet">
               <span class="bullet bullet-dot"></span>
@@ -905,7 +905,7 @@
           </span>
         </div>
         <div *ngIf="isSummaryReport" class="menu-item menu-accordion" routerLinkActive="here show"
-          data-kt-menu-trigger="click">
+          routerLink="/report/summaryReport" data-kt-menu-trigger="click">
           <span class="menu-link">
             <span class="menu-bullet">
               <span class="bullet bullet-dot"></span>
@@ -915,7 +915,7 @@
           </span>
         </div>
         <div *ngIf="isViswasaTxExcel" class="menu-item menu-accordion" routerLinkActive="here show"
-          data-kt-menu-trigger="click">
+          routerLink="/report/viswasaTxEcel" data-kt-menu-trigger="click">
           <span class="menu-link">
             <span class="menu-bullet">
               <span class="bullet bullet-dot"></span>
@@ -925,7 +925,7 @@
           </span>
         </div>
         <div *ngIf="isSalesPurReport" class="menu-item menu-accordion" routerLinkActive="here show"
-          data-kt-menu-trigger="click">
+          routerLink="/report/salesPurchaseReport" data-kt-menu-trigger="click">
           <span class="menu-link">
             <span class="menu-bullet">
               <span class="bullet bullet-dot"></span>
